# Udacity_Data_Science

./: .gitignore  README.md  pyproject.toml  requirements.txt
2_Introduction_to_Data_Science_and_Supervised_ML/: README.md
2_Introduction_to_Data_Science_and_Supervised_ML/exercises/: 01-mlr_codealong.ipynb  01-mlr_exercise.ipynb  02-1-Regression_Diabetes.ipynb  02-2-Classification_Iris.ipynb  03-1-classification_metrics.ipynb  03-2-regression_metrics.ipynb  04-1-Use_Shapley_Values_for_Feature_Selection.ipynb  04-2-Intepret_the_Results_of_the_Aequitas_Framework.ipynb
2_Introduction_to_Data_Science_and_Supervised_ML/project/: README.md  cms_hospital_quality_analysis.ipynb
3_Software_Engineering_for_Data_Scientists/: README.md
3_Software_Engineering_for_Data_Scientists/exercises/: 01-StandardScaler.ipynb  02_classes_vs_instance.ipynb  03_magic_methods.ipynb  04_simple_inheritance.ipynb  05_multiple_inheritance.ipynb
3_Software_Engineering_for_Data_Scientists/project/: README.md
4_Data_Science_Pipelines/: README.md
4_Data_Science_Pipelines/exercises/: 01_Preprocessing_Pipelines_Employees.ipynb  02_ML_Pipelines_Employees.ipynb  03_Grid_Search_Employees.ipynb  04_Image_Manipulation.ipynb  05_Feature_Extraction.ipynb  06_Image_Classification_FashionMNIST.ipynb  07_Optimizing-Full-CV-Pipeline.ipynb  08_building-a-tokenizer.ipynb  09_nlp-with-spacy.ipynb  10_nlp-pipeline.ipynb  3_Grid_Search_Employees.ipynb
4_Data_Science_Pipelines/project/: Fashion_Forward_Forecasting.ipynb  README.md
5_Unsupervised_ML_and_Recommendation_Systems/: README.md
(+27 files in other folders)
