[project]
name = "udacity-data-science"
version = "0.1.0"
description = "Udacity Data Science Nanodegree exercises"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.0.1",
    "pandas==2.2.2",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "notebook==6.5.6",
    "jupyter",
    "ipykernel",
    "xgboost==2.1.3",
    "shap==0.46.0",
    "aequitas==0.42.0",
]
